objects/BlueSTAR_MEAB139_WSDL_meReqCtl__mdt.object
<CustomObject>
    <fields>
        <fullName>fwAcctStaCd__c</fullName>
        <label>fwAcctStaCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwActCd__c</fullName>
        <label>fwActCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwAddrFixInd__c</fullName>
        <label>fwAddrFixInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwApplid__c</fullName>
        <label>fwApplid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwAutoFlow__c</fullName>
        <label>fwAutoFlow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwBusinessFunc__c</fullName>
        <label>fwBusinessFunc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwBypassEdit__c</fullName>
        <label>fwBypassEdit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwBypassMsgInd__c</fullName>
        <label>fwBypassMsgInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwCallingProcess__c</fullName>
        <label>fwCallingProcess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwDocSrc__c</fullName>
        <label>fwDocSrc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwExecMode__c</fullName>
        <label>fwExecMode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwInitngTrnSeqNbr__c</fullName>
        <label>fwInitngTrnSeqNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwInvReqCd__c</fullName>
        <label>fwInvReqCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwLogMsgFlg__c</fullName>
        <label>fwLogMsgFlg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwMemshpTrackngNbr__c</fullName>
        <label>fwMemshpTrackngNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwNicAddr__c</fullName>
        <label>fwNicAddr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwPendSeqNbr__c</fullName>
        <label>fwPendSeqNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwPmEventId__c</fullName>
        <label>fwPmEventId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwPmLevel__c</fullName>
        <label>fwPmLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwPrgSecToken__c</fullName>
        <label>fwPrgSecToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwPrgTrcFlg__c</fullName>
        <label>fwPrgTrcFlg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwReqFill2__c</fullName>
        <label>fwReqFill2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwReqWormWrote__c</fullName>
        <label>fwReqWormWrote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwTableFlag__c</fullName>
        <label>fwTableFlag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwTranSrcCd__c</fullName>
        <label>fwTranSrcCd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fwUserid__c</fullName>
        <label>fwUserid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reqRowCount__c</fullName>
        <label>reqRowCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BlueSTAR MEAB139 WSDL meReqCtl</label>
    <pluralLabel>BlueSTAR MEAB139 WSDL meReqCtls</pluralLabel>
</CustomObject>